--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+
+  "SassCompiler": {
+    "SourceFolder": "Views",
+    "TargetFolder": "wwwroot/css",
+    "Arguments": "--style=compressed",
+    "GenerateScopedCss": true,
+    "ScopedCssFolders": ["Views", "Pages", "Shared", "Components","Partials"],
+    "IncludePaths": []
+  }
+  }
