--- a/appsettings.json
+++ b/appsettings.json
@@ -6,13 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-
   "SassCompiler": {
-    "SourceFolder": "Views",
-    "TargetFolder": "wwwroot/css",
-    "Arguments": "--style=compressed",
-    "GenerateScopedCss": true,
-    "ScopedCssFolders": ["Views", "Pages", "Shared", "Components","Partials"],
-    "IncludePaths": []
+    "SourceFolder": "Styles",
+    "TargetFolder": "wwwroot\\css",
+    "Arguments": "--error-css --no-source-map",
+    "IncludePaths": ["Styles"]
   }
-  }
+}
